Fix: Menu background color in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -85,7 +85,7 @@ All colors MUST be HSL.
     --border: 210 20% 20%; /* #32363A */
     --input: 210 20% 20%;
     --ring: 120 100% 30%;
-    --sidebar-background: 240 5.9% 10%;
+    --sidebar-background: 210 20% 7%;
     --sidebar-foreground: 240 4.8% 95.9%;
     --sidebar-primary: 224.3 76.3% 48%;
     --sidebar-primary-foreground: 0 0% 100%;
